WEB-2700 Added styling to shift action menu to the left to prevent cropping

--- a/fid-web/src/main/webapp/style/pageStyles/wide.css
+++ b/fid-web/src/main/webapp/style/pageStyles/wide.css
@@ -325,6 +325,14 @@
 	border-right:10px solid white;	 
 }
 
+/*
+ SEARCH RESULTS ACTIONS
+ 	shift floating drop down menu to the left so it doesn't get cut off
+*/
+
+ul.floatingDropdown ul {
+	left: -35px;
+}
 
 /*** hacks.  to be removed when the new asset search page completely replaces the old one.
  these are just to make both pages live together with minimal code changes.
